--- a/D3 Data Journalism/Instructions/StarterCode/index.html
+++ b/D3 Data Journalism/Instructions/StarterCode/index.html
@@ -30,9 +30,9 @@
           <h2>Correlations Between Income, Risk Factors, and Age</h2>
           <p> Lower income was correlated with smoking. States with lower median income had  higher amounts of people who smoked. </p>
 
-          <p>As levels of income increased, obestiy decreased. States with higher median income and lower poverty percentage have significantly lower obesity prevalence. </p>
+          <p>As levels of income increased, obestiy decreased.  </p>
 
-          <p>Access to  healthcare improves as median income increases. States with median income above $65,000 have fewer lacking healthcare. </p>
+          <p>Access to  healthcare improves as median income increases. States with median income above $65,000 have fewer without healthcare. </p>
         </div>
       </div>
     </div>
