cleaned HW File

--- a/D3 Data Journalism/Instructions/StarterCode/index.html
+++ b/D3 Data Journalism/Instructions/StarterCode/index.html
@@ -27,7 +27,7 @@
     <div class="row">
       <div class="col-xs-12  col-md-9">
         <div class="article">
-          <h2>Correlations Between Income, Risk Factors, and Age</h2>
+          <h2>Correlations Between Income, Behavior Risk Factors, and Age</h2>
           <p> Lower income was correlated with smoking. States with lower median income had  higher amounts of people who smoked. </p>
 
           <p>As levels of income increased, obestiy decreased.  </p>
@@ -38,9 +38,7 @@
     </div>
   </div>
 
-  <!-- Footer-->
-  <div id="footer">
-    <p>The Coding Boot Camp&copy;2016</p>
+    
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
